<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_tasks">

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.orauldev.todoapp.ui.tasks.TasksFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_tasks" >

        <action
            android:id="@+id/action_tasks_to_add_tasks"
            app:destination="@id/nav_add_task" />

        <action
            android:id="@+id/action_tasks_to_task_detail"
            app:destination="@id/nav_taskdetail" />
    </fragment>

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.orauldev.todoapp.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" >

        <action
            android:id="@+id/action_statistics_to_tasks"
            app:destination="@id/nav_tasks"
            app:popUpTo="@id/nav_statistics"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_taskdetail"
        android:name="com.orauldev.todoapp.ui.taskdetail.TaskDetailFragment"
        android:label="@string/title_taskdetail"
        tools:layout="@layout/fragment_task_detail" >

        <action
            android:id="@+id/action_task_detail_to_edit_task"
            app:destination="@+id/nav_edit_task" />

        <action
            android:id="@+id/action_task_detail_to_tasks"
            app:destination="@id/nav_tasks" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_task"
        android:name="com.orauldev.todoapp.ui.addtask.AddTaskFragment"
        android:label="@string/title_addtask"
        tools:layout="@layout/fragment_add_task" >

        <action
            android:id="@+id/action_add_task_to_tasks"
            app:destination="@id/nav_tasks"
            app:popUpTo="@id/nav_add_task"
            app:popUpToInclusive="true"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_task"
        android:name="com.orauldev.todoapp.ui.edittask.EditTaskFragment"
        android:label="@string/title_edittask"
        tools:layout="@layout/fragment_edit_task" >

        <action
            android:id="@+id/action_edit_task_to_tasks"
            app:destination="@id/nav_tasks" />
    </fragment>
</navigation>